added streaming process instead of parsing
